--- a/KeyRingApp/KeyRingApp.Android/KeyRingApp.Android.csproj
+++ b/KeyRingApp/KeyRingApp.Android/KeyRingApp.Android.csproj
@@ -61,6 +61,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <AndroidAsset Include="Assets\ArchitectsDaughter.ttf" />
+    <AndroidAsset Include="Assets\ClaireHandBold.otf" />
+    <AndroidAsset Include="Assets\ClaireHandRegular.otf" />
+    <AndroidAsset Include="Assets\SoulMarker_Handwriting_Font.otf" />
+    <AndroidAsset Include="Assets\SoulMarker_Light.otf" />
+    <AndroidAsset Include="Assets\TragicMarker.otf" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <None Include="Properties\AndroidManifest.xml" />
@@ -97,6 +103,9 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\postit.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
