--- a/KeyRingApp/KeyRingApp/KeyRingApp.csproj
+++ b/KeyRingApp/KeyRingApp/KeyRingApp.csproj
@@ -9,6 +9,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Views\PasswordPage.xaml.cs">
+      <DependentUpon>PasswordPage.xaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Views\PasswordPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\LoginPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
